# intervals-rs

./: Cargo.toml  README.md  README.tpl  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: errors.rs  interval.rs  interval_limit.rs  interval_limit_test.rs  interval_seq.rs  interval_seq_test.rs  interval_test.rs  lib.rs  limit_value.rs  limit_value_test.rs
