[package]
name = "intervals-rs"
version = "0.0.4"
description = "A Rust crate for intervals"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["intervals"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
repository = "https://github.com/j5ik2o/intervals-rs"

[badges]
github = { repository = "j5ik2o/intervals-rs", workflow = "Rust" }

[dependencies]
rand = "0.8.3"

[dev-dependencies]
rust_decimal = "1.8.1"
once_cell = "1.7.2"
